# cpp-quick-scripts

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  config.sh  setup.sh  tasks.toml  test.sh
src/: main.cpp  main.test.cpp
